--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@apollo/server": "^5.0.0",
     "@as-integrations/express5": "^1.1.2",
+    "@prisma/client": "^6.17.1",
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
