--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@types/axios": "^0.14.4",
     "@types/bun": "latest",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3"
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10"
   },
   "peerDependencies": {
     "typescript": "^5"
@@ -20,9 +21,11 @@
     "@as-integrations/express5": "^1.1.2",
     "@prisma/client": "^6.17.1",
     "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "graphql": "^16.11.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "prisma": "^6.17.1"
   }
